fixed overall styling and spacing

--- a/client/src/styles/Card.css
+++ b/client/src/styles/Card.css
@@ -1,5 +1,5 @@
 #card{
-    width:23em;
+    width:362px;
     border-radius: 12px;
     height: 16.5em;
     color: white;
