--- a/client/src/styles/Searchbar.css
+++ b/client/src/styles/Searchbar.css
@@ -49,7 +49,7 @@
 
 #search-area{
     display: flex;
-    width: 44vw;
+    width: 620px;
     height: 2.5em;
 }
 #search-icon{
@@ -150,7 +150,7 @@
     padding: 10px;
 }
 }
-@media screen and (max-width:400px) {
+@media screen and (max-width:500px) {
     #search-btn{
         width: auto;
     }
@@ -159,18 +159,9 @@
         width: auto;
     }
     #search-bar{
-        padding: 0;
-        justify-content: space-between;
-    
-    }
-    #logo-container{
-        padding:5px 0;
-        width: 80% ;
-        justify-content:center;
-        align-items: center;
+        padding: 10px;
     }
     #logo>h2{
-        font-size: 23.5px;
-        vertical-align: bottom;
+        display: none;
     }
     }
