--- a/client/src/styles/Video.css
+++ b/client/src/styles/Video.css
@@ -58,7 +58,7 @@
 .vid-btns{
     background-color:#282828;
     border: 2px solid transparent;
-    border-radius: 20px;
+    border-radius: 18px;
     color: white;
     padding:5px 10px;
     font-size: 14px;
@@ -76,7 +76,8 @@
 #vid-icons{
     display: flex;
     justify-content: space-between;
-    width: 42%;
+    gap:15px;
+
 }
 .vid-icon{
     vertical-align: middle;
@@ -87,8 +88,7 @@
     border-radius:10px ;
     padding:15px;
     font-size: 14px;
-
-
+    text-align: justify;
 }
 #info{
     display: flex;
@@ -141,14 +141,7 @@ textarea:focus-visible{
     padding-top: 5px;
 }
 
-.suggestion{
-    display: flex;
-    color: #ffffffee;
-    font-size: 12px;
-   padding:10px 20px;
-   gap:2px;
- 
-}
+
 #s-txt{
     padding-left: 10px;
 }
@@ -158,6 +151,9 @@ textarea:focus-visible{
 h2,h3,p{
     padding: 0;
     margin: 0;
+}
+#suggestions{
+    width:auto;
 }
 
 @media screen and (max-width:1200px) {
